--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
         
         
         <div class = 'rarity'>
-            <button class = "rarity_normal" onclick="RaritySelect(0)">Normal</button>
+            <button class = "rarity_normal" onclick="RaritySelect(0)">Common</button>
             <button class = "rarity_rare" onclick="RaritySelect(1)">Rare</button>
             <button class = "rarity_epic" onclick="RaritySelect(2)">Epic</button>
-            <button class = "rarity_legend" onclick="RaritySelect(3)">Legend</button>
+            <button class = "rarity_legend" onclick="RaritySelect(3)">Relic</button>
         </div>
 
         <div class="lists">
@@ -137,6 +137,6 @@
         </p>
     </div>
 </body>
-<footer>
-    <div id="update"> v.1.0.3 - Last update: July 30th, 2023.</div>
+<footer class = 'footer'>
+    <div id="update"> v.1.0.4 - Last update: August 12th, 2023.</div>
 </footer>
